--- a/static/1.html
+++ b/static/1.html
@@ -1,5 +1,11 @@
-<html>
+<html><b></b>
 <nav></nav>
-This is blog post number one
+This is <em>blog</em> post number one
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-141548-9";
+urchinTracker();
+</script>
 
 </html>
