Use another technique to make variables from within while loop accessible

--- a/source/2.html
+++ b/source/2.html
@@ -1,5 +1,7 @@
 ~header~
 ~nav~
-This is blog post number two whatever.
+
+<h1>Title of another post</h1>
+<p>This is blog post number two whatever.</p>
 
 ~footer~
