--- a/static/1.html
+++ b/static/1.html
@@ -1,6 +1,11 @@
 <html><b></b>
 <nav></nav>
+
+
+<h1>Title of the post</h1>
+<p>
 This is <em>blog</em> post number one
+</p>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
