--- a/static/2.html
+++ b/static/2.html
@@ -1,6 +1,8 @@
 <html><b></b>
 <nav></nav>
-This is blog post number two whatever.
+
+<h1>Title of another post</h1>
+<p>This is blog post number two whatever.</p>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
 <script type="text/javascript">
