--- a/static/2.html
+++ b/static/2.html
@@ -2,6 +2,7 @@
 <nav></nav>
 
 <h1>Title of another post</h1>
+<time>983279879</time>
 <p>This is blog post number two whatever.</p>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
