--- a/static/1387081320-verypopular.html
+++ b/static/1387081320-verypopular.html
@@ -1,4 +1,4 @@
-<html><head><title>Very popular | f1vlad.com</title></head><b></b>
+<html><head><title>Very popular | Be Static Blog</title></head><b></b>
 <nav></nav>
 
 <h1>Very popular</h1>
